--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>租借計算工具</title>
   <style>
+    /* ✅ Make sizing consistent everywhere */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: "Segoe UI", sans-serif;
       margin: 20px;
       background: #f9fbfc;
       color: #333;
     }
+
     .container {
       max-width: 600px;
       margin: auto;
@@ -19,38 +25,52 @@
       border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
+
     h2 {
       text-align: center;
       margin-bottom: 20px;
     }
+
     label {
       font-weight: bold;
       margin-top: 10px;
       display: block;
     }
-    select, input, button {
+
+    /* ✅ Standardize all form fields */
+    select, input[type="date"], button {
       width: 100%;
-      box-sizing: border-box;
       padding: 10px;
       margin-top: 5px;
       margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
       font-size: 16px;
+      border-radius: 6px;
       display: block;
+      height: 44px; /* consistent mobile-friendly height */
+      line-height: 1.2;
     }
-    input[type="date"] {
-      line-height: normal;
+
+    /* Inputs & select consistent borders */
+    select, input[type="date"] {
+      border: 1px solid #ccc;
+      background: #fff;
+
+      -webkit-appearance: none; /* iOS Safari fix */
+      appearance: none;
     }
+
+    /* Button matches width & height */
     button {
       background: #0078D7;
       color: white;
       border: none;
       cursor: pointer;
+      transition: background 0.2s ease-in-out;
     }
     button:hover {
       background: #005fa3;
     }
+
     #result {
       margin-top: 20px;
       padding: 15px;
