--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <option value="X100VI">Fujifilm X100VI</option>
     </select>
 
-    <label for="startDate">取機日期(MM/DD/YYYY)：</label>
+    <label for="startDate">取機日期：</label>
     <input type="date" id="startDate" />
 
     <label for="endDate">還機日期：</label>
