--- a/PriceCalculator.html
+++ b/PriceCalculator.html
@@ -197,7 +197,7 @@
             const d = new Date(firstChargeDate);
             d.setDate(firstChargeDate.getDate() + (i - 1));
             const dow = d.getDay();
-            const isWeekend = (dow === 5 || dow === 6 || dow === 0);
+            const isWeekend = (dow === 4 || dow === 5 || dow === 6 || dow === 0);
             const tier = isWeekend ? data.weekend : data.weekday;
             const addon = tier.more14;
             total += addon;
@@ -210,7 +210,7 @@
             const d = new Date(firstChargeDate);
             d.setDate(firstChargeDate.getDate() + (i - 1));
             const dow = d.getDay();
-            const isWeekend = (dow === 5 || dow === 6 || dow === 0);
+            const isWeekend = (dow === 4 || dow === 5 || dow === 6 || dow === 0);
             const tier = isWeekend ? data.weekend : data.weekday;
             const addon = tier.more14;
             total += addon;
