--- a/index.html
+++ b/index.html
@@ -150,10 +150,11 @@
       "R5": { deposit:16000, perDay:350, weekday1:300, weekend:{2:210,3:70,more:80,more14:60}, weekday:{2:180,3:60,more:70,more14:50}, week:900, twoWeek:1280 },
       "R5ii": { deposit:18000, perDay:500, weekday1:430, weekend:{2:300,3:100,more:110,more14:80}, weekday:{2:260,3:90,more:90,more14:70}, week:1260, twoWeek:1780 },
       "R6ii": { deposit:12000, perDay:250, weekday1:210, weekend:{2:150,3:100,more:80,more14:60}, weekday:{2:150,3:100,more:80,more14:60}, week:800, twoWeek:1200 },
+      "R6iii": { deposit:18000, perDay:400, weekday1:340, weekend:{2:240,3:80,more:90,more14:70}, weekday:{2:200,3:70,more:70,more14:60}, week:990, twoWeek:1440 },
       "EF 70-200 F2.8 ii": { deposit:8000, perDay:190, weekday1:160, weekend:{2:110,3:40,more:40,more14:30}, weekday:{2:90,3:30,more:40,more14:30}, week:470, twoWeek:850 },
       "RF 70-200 F2.8": { deposit:15000, perDay:400, weekday1:340, weekend:{2:240,3:80,more:90,more14:70}, weekday:{2:200,3:70,more:70,more14:60}, week:990, twoWeek:1440 },
       "RF 100-500": { deposit:15000, perDay:400, weekday1:340, weekend:{2:240,3:80,more:90,more14:70}, weekday:{2:200,3:70,more:70,more14:60}, week:990, twoWeek:1440 },
-      "RF 100-400": { deposit:3000, perDay:80, weekday1:70, weekend:{2:60,3:10,more:20,more14:10}, weekday:{2:50,3:10,more:10,more14:10}, week:200, twoWeek:280 },
+      "RF 100-400": { deposit:3000, perDay:120, weekday1:100, weekend:{2:80,3:30,more:30,more14:20}, weekday:{2:70,3:30,more:20,more14:20}, week:320, twoWeek:460 },
       "RF 50mm 1.8": { deposit:1000, perDay:50, weekday1:40, weekend:{2:40,3:20,more:20,more14:20}, weekday:{2:30,3:20,more:20,more14:20}, week:180, twoWeek:350},
       "A7R5": { deposit:18000, perDay:400, weekday1:340, weekend:{2:240,3:80,more:90,more14:70}, weekday:{2:200,3:70,more:70,more14:60}, week:990, twoWeek:1440 },
       "A7C2": { deposit:12000, perDay:350, weekday1:300, weekend:{2:210,3:70,more:80,more14:60}, weekday:{2:180,3:60,more:70,more14:50}, week:900, twoWeek:1280 },
