--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       <option value="R5">Canon R5</option>
       <option value="R5ii">Canon R5ii</option>
       <option value="R6ii">Canon R6ii</option>
+      <option value="R6iii">Canon R6iii</option>
       <option value="EF 70-200 F2.8 ii">Canon EF 70-200 F2.8 ii</option>
       <option value="RF 70-200 F2.8">Canon RF 70-200 F2.8</option>
       <option value="RF 100-500">Canon RF 100-500</option>
