--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
           </optgroup>
           <optgroup label="Vivo 手機">
             <option value="X200 Ultra">Vivo X200 Ultra + 專業攝影套裝</option>
+            <option value="X300 Pro">Vivo X300 Pro + 專業攝影套裝</option>
           </optgroup>
           <optgroup label="Canon 相機">
             <option value="R5">Canon R5</option>
@@ -300,6 +301,7 @@
     const pricingData = {
       "S24U": { deposit: 6000, perDay: 180, weekday1: 160, weekend: { 2: 110, 3: 50, more: 50 }, weekday: { 2: 100, 3: 50, more: 50 } },
       "S25U": { deposit: 10000, perDay: 280, weekday1: 250, weekend: { 2: 170, 3: 80, more: 70 }, weekday: { 2: 150, 3: 70, more: 60 } },
+      "X200 Ultra": { deposit: 9000, perDay: 280, weekday1: 250, weekend: { 2: 170, 3: 80, more: 70 }, weekday: { 2: 150, 3: 70, more: 60 } },
       "X200 Ultra": { deposit: 9000, perDay: 280, weekday1: 250, weekend: { 2: 170, 3: 80, more: 70 }, weekday: { 2: 150, 3: 70, more: 60 } },
       "R5": { deposit: 16000, perDay: 350, weekday1: 320, weekend: { 2: 210, 3: 110, more: 90 }, weekday: { 2: 190, 3: 100, more: 80 } },
       "R5ii": { deposit: 20000, perDay: 500, weekday1: 450, weekend: { 2: 300, 3: 150, more: 130 }, weekday: { 2: 270, 3: 140, more: 120 } },
