--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
           <div class="info-icon">🔒</div>
           <div class="info-content">
             <div class="info-title">按金: $${data.deposit.toLocaleString()}</div>
-            <div class="info-desc">支持信用卡預授權 (Hold Limit) / FPS / Payme / Alipay</div>
+            <div class="info-desc">支持信用卡預授權 (Hold Limit) / FPS / Alipay</div>
           </div>
         </div>
 
