--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
     </button>
 
     <header>
-      <h2>📷 852camera</h2>
+      <h2>📷 852Camera</h2>
       <div class="subtitle">專業攝影器材租賃計算</div>
     </header>
 
