--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
         </details>
         <details>
             <summary>按金何時退還？</summary>
-            <div class="faq-content">檢查器材無誤後，現金/FPS按金會即日/+1日退還。信用卡預授權於付款後7個工作天解除鎖定。</div>
+            <div class="faq-content">檢查器材無誤後，FPS按金會即日/+1日退還。信用卡預授權於付款後7個工作天解除鎖定。</div>
         </details>
         <details>
             <summary>如果遲還會怎樣？</summary>
