--- a/index.html
+++ b/index.html
@@ -848,8 +848,7 @@
               <option value="S25U">Samsung S25U</option>
             </optgroup>
             <optgroup label="Vivo 手機">
-              <option value="X200 Ultra">Vivo X200 Ultra + 專業攝影套裝</option>
-              <option value="X300 Pro">Vivo X300 Pro + 專業攝影套裝</option>
+              <option value="X200 Ultra">Vivo X200 Ultra / X300 Pro + 專業攝影套裝</option>
             </optgroup>
             <optgroup label="Canon 相機">
               <option value="R5">Canon R5</option>
@@ -1103,7 +1102,6 @@
       "S24U": { deposit: 6000, perDay: 180, weekday1: 160, weekend: { 2: 110, 3: 50, more: 50 }, weekday: { 2: 100, 3: 50, more: 50 } },
       "S25U": { deposit: 8000, perDay: 280, weekday1: 250, weekend: { 2: 170, 3: 80, more: 70 }, weekday: { 2: 150, 3: 70, more: 60 } },
       "X200 Ultra": { deposit: 9000, perDay: 280, weekday1: 250, weekend: { 2: 170, 3: 80, more: 70 }, weekday: { 2: 150, 3: 70, more: 60 } },
-      "X300 Pro": { deposit: 9000, perDay: 280, weekday1: 250, weekend: { 2: 170, 3: 80, more: 70 }, weekday: { 2: 150, 3: 70, more: 60 } },
       "R5": { deposit: 16000, perDay: 350, weekday1: 320, weekend: { 2: 210, 3: 110, more: 90 }, weekday: { 2: 190, 3: 100, more: 80 } },
       "R5ii": { deposit: 20000, perDay: 500, weekday1: 450, weekend: { 2: 300, 3: 150, more: 130 }, weekday: { 2: 270, 3: 140, more: 120 } },
       "R6ii": { deposit: 12000, perDay: 300, weekday1: 270, weekend: { 2: 180, 3: 90, more: 80 }, weekday: { 2: 160, 3: 80, more: 70 } },
