--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
         <div class="dep-desc">身份證 + 2個月內住址 + 門票</div>
       </div>
       <div class="deposit-card" onclick="setDepositRate(0, this)" data-rate="0">
-        <div class="dep-percent">學生按金 0%</div>
+        <div class="dep-percent">0% 按金</div>
         <div class="dep-desc">身份證 + 學生證 + 門票</div>
       </div>
     </div>
@@ -991,6 +991,7 @@
         ⚠️ <strong>請注意：</strong>所需證明文件需租用最少前一日經 WhatsApp / Instagram 傳送給我們。<br>
         • 住址證明需為最近 2 個月內<br>
         • 活動門票需為租用期內進行之活動
+        • 提供嘅證件必須於有效期內
     </div>
 
     <!-- Customer Info -->
