--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
     <div class="deposit-note">
         ⚠️ <strong>請注意：</strong>所需證明文件需租用最少前一日經 WhatsApp / Instagram 傳送給我們。<br>
         • 住址證明需為最近 2 個月內<br>
-        • 活動門票需為租用期內進行之活動
+        • 活動門票需為租用期內進行之活動<br>
         • 提供嘅證件必須於有效期內
     </div>
 
