--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
     <label class="checkbox-wrapper" style="align-items: flex-start;">
         <input type="checkbox" id="photoEditToggle" onchange="calculatePrice()">
         <div>
-            <span class="checkbox-text">✨ 試用修圖服務 (Photo Editing)</span>
+            <span class="checkbox-text">✨ 試用演唱會調色服務 (Photo Editing)</span>
             <span class="checkbox-subtext" style="color:var(--text-muted);">免費試用 (最多5張)。此乃測試功能，不包含在租賃費用/服務範圍內。</span>
         </div>
     </label>
