--- a/index.html
+++ b/index.html
@@ -1714,7 +1714,7 @@
       currentQuoteText += `------------------\n`;
       currentQuoteText += `🔒 按金方案: ${depositSchemeText}\n`;
       currentQuoteText += `📄 所需文件: ${depositDocs}\n`;
-      currentQuoteText += `⚠️ 注意: 所有文件需經 WhatsApp 提交審批\n`;
+      currentQuoteText += `⚠️ 注意: 所有文件需經 WhatsApp 或 IG DM 提交\n`;
       currentQuoteText += `------------------\n`;
       
       currentQuoteText += `💰 總價: $${grandTotal.toLocaleString()}\n🔒 總按金: $${grandDeposit.toLocaleString()}`;
